tests/fixtures/invalid/oct_dict.py
# Cannot call oct() with Dict[str, int]
x = oct({"a": 1})
